ensembling with randomforest

--- a/notebook/ensembling.ipynb
+++ b/notebook/ensembling.ipynb
@@ -14,8 +14,9 @@
     "from sklearn.metrics import cohen_kappa_score\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import classification_report\n",
-    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "# Modeling imports\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from xgboost  import XGBClassifier\n",
     "from lightgbm import LGBMClassifier, early_stopping, log_evaluation\n",
     "from sklearn.model_selection import StratifiedKFold\n",
@@ -77,22 +78,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6046436a-eafc-462a-87a9-efb193d317f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['fixed acidity', 'volatile acidity', 'citric acid',\n",
+    "       'residual sugar', 'chlorides', 'free sulfur dioxide',\n",
+    "       'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "45e4f2b8-c2f3-43b6-8c6e-c104b8349e10",
    "metadata": {},
    "outputs": [],
    "source": [
     "Id = test[[\"Id\"]]\n",
-    "train = pd.concat([train,origin],ignore_index=True)\n",
+    "train = pd.concat([train,origin],ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "e7503736-6d13-4d6d-8955-e6e148aff03d",
+   "metadata": {},
+   "source": [
+    "#Joue contre nous, à ne pas faire\n",
+    "outliers = train.loc[train['volatile acidity'] > 1.4]\n",
+    "outliers = pd.concat([outliers, train.loc[train['citric acid'] > 0.9]], axis=0)\n",
+    "outliers = pd.concat([outliers, train.loc[train['chlorides'] > 0.5]], axis=0)\n",
+    "outliers = pd.concat([outliers, train.loc[train['free sulfur dioxide'] > 60]], axis=0)\n",
+    "outliers = pd.concat([outliers, train.loc[train['total sulfur dioxide'] > 200]], axis=0)\n",
+    "outliers = pd.concat([outliers, train.loc[train['sulphates'] > 1.75]], axis=0)\n",
+    "outliers = pd.concat([outliers, train.loc[train['alcohol'] > 14]], axis=0)\n",
+    "outliers = outliers[~outliers.duplicated()]\n",
+    "train = train.drop(outliers.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "441ca9f7-6c55-4ea1-b52e-004dcef2256d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "train[features] = scaler.fit_transform(train[features])\n",
+    "test[features] = scaler.transform(test[features])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d697b3e9-a4c6-47a6-bb36-fcfb9cd79030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train,test= pca(train, test)\n",
     "X_test = test.drop(columns = \"Id\")\n",
     "X_train,X_val,y_train,y_val = SelfSplitTrain(train)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "427b97e6-1160-44eb-b18a-9187e6679e89",
+   "cell_type": "raw",
+   "id": "692b43de-cfe2-4f85-a5dd-a93177ddf846",
    "metadata": {},
    "source": [
+    "from warnings import simplefilter\n",
+    "simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "def objective(trial):\n",
     "    target_clases = train[\"quality\"].value_counts()\n",
     "    n_classes = target_clases.nunique()\n",
@@ -128,7 +181,7 @@
     "\n",
     "\n",
     "study = optuna.create_study(direction='maximize', sampler = TPESampler())\n",
-    "study.optimize(func=objective, n_trials=500)\n",
+    "study.optimize(func=objective, n_trials=1000)\n",
     "print(study.best_params)"
    ]
   },
@@ -139,21 +192,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_xgb = {'max_depth': 9,\n",
-    "              'learning_rate': 0.10170219296989287, \n",
-    "              'n_estimators': 939,\n",
-    "              'min_child_weight': 4,\n",
-    "              'gamma': 0.2873681880046375,\n",
-    "              'subsample': 0.6582602969527163,\n",
-    "              'colsample_bytree': 0.7214980206445512,\n",
-    "              'reg_alpha': 0.33596370591990027,\n",
-    "              'reg_lambda': 0.5061368887005409,\n",
-    "              'n_cv': 5}"
+    "params_xgb = {'max_depth': 10,\n",
+    "              'learning_rate': 0.18859091410143083,\n",
+    "              'n_estimators': 320,\n",
+    "              'min_child_weight': 1,\n",
+    "              'gamma': 0.9318564324675482,\n",
+    "              'subsample': 0.6841357312658527,\n",
+    "              'colsample_bytree': 0.8836216247106674,\n",
+    "              'reg_alpha': 0.04096397785344959,\n",
+    "              'reg_lambda': 0.738301353005302,\n",
+    "              'n_cv': 9}\n",
+    "#0.5913996743158005."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "958ed3be-ef84-4c7c-8c74-eef23ab8cebd",
+   "metadata": {},
+   "source": [
+    "{'max_depth': 3, 'learning_rate': 0.8556313178954359, 'n_estimators': 88, 'min_child_weight': 6, 'gamma': 0.4919156565210436, 'subsample': 0.7578175105327075, 'colsample_bytree': 0.8445913737915325, 'reg_alpha': 0.12218618491886471, 'reg_lambda': 0.38518097123010564, 'n_cv': 6}\n",
+    "0.5844221863904621."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e8db2e77-bf7f-44b0-863d-b28e96ee5549",
+   "id": "01763963-7b86-43ec-a934-90a45f673fcc",
+   "metadata": {},
+   "source": [
+    "{'max_depth': 6, 'learning_rate': 0.39948345445210615, 'n_estimators': 847, 'min_child_weight': 10, 'gamma': 0.18838201293419432, 'subsample': 0.7729886713513907, 'colsample_bytree': 0.5003328515340764, 'reg_alpha': 0.2714649065502258, 'reg_lambda': 0.6491207694721693, 'n_cv': 6}\n",
+    "0.5448889729142714"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b075c9-ca8b-468a-bc83-1b2bca1477b0",
+   "metadata": {},
+   "source": [
+    "{'max_depth': 10, 'learning_rate': 0.20768479698089887, 'n_estimators': 309, 'min_child_weight': 2, 'gamma': 0.031486067400704275, 'subsample': 0.9058671425260246, 'colsample_bytree': 0.5887713288141307, 'reg_alpha': 0.16442203655476706, 'reg_lambda': 0.3344072924469446, 'n_cv': 10}\n",
+    "0.5872138165056959."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "3e4bf8c5-6af8-4b68-b7eb-223dc85f7d6d",
    "metadata": {},
    "source": [
     "def objective2(trial):\n",
@@ -192,7 +273,7 @@
     "\n",
     "\n",
     "study = optuna.create_study(direction='maximize', sampler = TPESampler())\n",
-    "study.optimize(func=objective2, n_trials=500)\n",
+    "study.optimize(func=objective2, n_trials=1000)\n",
     "print(study.best_params)"
    ]
   },
@@ -203,17 +284,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_lgbm= {'lambda_l1': 0.06032958694472297,\n",
-    "              'lambda_l2': 9.468684954887555,\n",
-    "              'num_leaves': 49,\n",
-    "              'feature_fraction': 0.42024961425671364,\n",
-    "              'bagging_fraction': 0.6392661414098254,\n",
-    "              'bagging_freq': 9,\n",
-    "              'min_child_samples': 43,\n",
-    "              'min_data_in_leaf': 14,\n",
-    "              'max_depth': 8,\n",
-    "              'num_iterations': 3723,\n",
-    "              'n_cv': 9}"
+    "params_lgbm= {'lambda_l1': 0.724496036820687,\n",
+    "              'lambda_l2': 6.105851140217601,\n",
+    "              'num_leaves': 51,\n",
+    "              'feature_fraction': 0.6304230274320266,\n",
+    "              'bagging_fraction': 0.7631527827164979,\n",
+    "              'bagging_freq': 8,\n",
+    "              'min_child_samples': 49,\n",
+    "              'min_data_in_leaf': 1,\n",
+    "              'max_depth': 17,\n",
+    "              'num_iterations': 5864,\n",
+    "              'n_cv': 5}\n",
+    "\n",
+    "#0.5730556885663888."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "772cf058-6c82-4b12-8f7f-d9aca62c076a",
+   "metadata": {},
+   "source": [
+    "def objective3(trial):\n",
+    "    target_clases = train[\"quality\"].value_counts()\n",
+    "    n_classes = target_clases.nunique()\n",
+    "    params_optuna = {\n",
+    "             'max_depth': trial.suggest_int('max_depth', 1, 100),\n",
+    "             'min_samples_split': trial.suggest_int('min_samples_split', 2, 100),\n",
+    "             'min_samples_leaf': trial.suggest_int('min_samples_leaf', 1, 100),\n",
+    "             'min_weight_fraction_leaf': trial.suggest_float('bagging_fraction', 0, 1),\n",
+    "             'max_features': trial.suggest_int('max_features',1,12),\n",
+    "             'max_leaf_nodes': trial.suggest_int('min_child_samples', 1, 100),\n",
+    "             'min_impurity_decrease': trial.suggest_int('min_data_in_leaf', 1, 100),\n",
+    "             'num_iterations':trial.suggest_int('num_iterations', 100, 10000),\n",
+    "        }\n",
+    "    \n",
+    "    n=trial.suggest_int('n_cv', 3, 10)\n",
+    "    cv = StratifiedKFold(n,shuffle=True, random_state=42)\n",
+    "    fold_scores = []\n",
+    "    model = RandomForestClassifier(**params_optuna)\n",
+    "    model.fit(X_train,\n",
+    "              y_train,\n",
+    "              eval_set= [(X_val,y_val)],\n",
+    "              early_stopping_rounds = 50,\n",
+    "              verbose=500)\n",
+    "\n",
+    "    pred_val = model.predict(X_val)\n",
+    "\n",
+    "    score = cohen_kappa_score(y_val,pred_val, weights='quadratic')\n",
+    "    fold_scores.append(score)\n",
+    "    return np.mean(fold_scores)\n",
+    "\n",
+    "\n",
+    "study = optuna.create_study(direction='maximize', sampler = TPESampler())\n",
+    "study.optimize(func=objective2, n_trials=1000)\n",
+    "print(study.best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "479e3c9b-630e-470a-a6bd-5164109d2c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.model_selection import GridSearchCV,RandomizedSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Number of trees in random forest\n",
+    "n_estimators = [int(x) for x in np.linspace(start = 100, stop = 1000, num = 10)]\n",
+    "\n",
+    "# Number of features to consider at every split\n",
+    "max_features = ['auto']\n",
+    "\n",
+    "# Maximum number of levels in tree\n",
+    "max_depth = [int(x) for x in np.linspace(5, 30, num = 5)]\n",
+    "max_depth.append(None)\n",
+    "\n",
+    "# Minimum number of samples required to split a node\n",
+    "min_samples_split = [2, 5, 10]\n",
+    "\n",
+    "# Minimum number of samples required at each leaf node\n",
+    "min_samples_leaf = [1, 2, 4, 8]\n",
+    "\n",
+    "# Method of selecting samples for training each tree\n",
+    "bootstrap = [True]\n",
+    "\n",
+    "# Create the random grid\n",
+    "random_grid = {'n_estimators': n_estimators,\n",
+    "               'max_features': max_features,\n",
+    "               'max_depth': max_depth,\n",
+    "               'min_samples_split': min_samples_split,\n",
+    "               'min_samples_leaf': min_samples_leaf,\n",
+    "               'bootstrap': bootstrap}\n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "random = GridSearchCV(estimator = rf, param_grid= random_grid, cv = 3, verbose=200, n_jobs = -1)\n",
+    "random.fit(X_train,y_train)\n",
+    "# print best parameter after tuning\n",
+    "print(grid.best_params_)\n",
+    "# print how our model looks after hyper-parameter tuning\n",
+    "print(grid.best_estimator_)\n",
+    "grid_predictions = grid.predict(X_val)\n",
+    "print(classification_report(y_val, grid_predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f583426-2ca3-4a00-a790-0759349fcf08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print best parameter after tuning\n",
+    "print(random.best_params_)\n",
+    "# print how our model looks after hyper-parameter tuning\n",
+    "print(random.best_estimator_)\n",
+    "grid_predictions = random.predict(X_val)\n",
+    "print(classification_report(y_val, grid_predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109d709e-d800-4775-818c-903700612301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params_rf = {'bootstrap': True, 'max_depth': 17, 'max_features': 'auto', 'min_samples_leaf': 2, 'min_samples_split': 2, 'n_estimators': 200}"
    ]
   },
   {
@@ -245,7 +446,7 @@
    "source": [
     "features = list(X_train.columns)\n",
     "TARGET = 'quality'\n",
-    "k=10\n",
+    "k=50\n",
     "cv = StratifiedKFold(k, shuffle=True, random_state=42)\n",
     "fold_scores = []\n",
     "test_preds = []\n",
@@ -290,10 +491,17 @@
     "    if score2>0.36:\n",
     "        test_preds.append(model2.predict(test[features]))\n",
     "        fold_scores.append(score2)\n",
+    "    #****************RANDOM FOREST******************\n",
+    "    model3=RandomForestClassifier(**params_rf)\n",
+    "    model3.fit(X_train,y_train)\n",
+    "    pred_val3 = model3.predict(X_val)\n",
+    "    score3 = cohen_kappa_score(y_val,pred_val3, weights='quadratic')\n",
     "    \n",
-    "    oof_preds.extend(np.mean([pred_val1,pred_val2],axis=0))\n",
+    "    \n",
+    "    ###OOF###\n",
+    "    oof_preds.extend(np.mean([pred_val1,pred_val2,pred_val3],axis=0))\n",
     "    oof_true.extend(y_val)\n",
-    "    print(f'=== Fold {i} Cohen Kappa Score {np.mean([score1,score2])} ===')\n",
+    "    print(f'=== Fold {i} Cohen Kappa Score {np.mean([score1,score2,score3])} ===')\n",
     "\n",
     "print(f'=== Average Cohen Kappa Score {np.mean(fold_scores)} ===')"
    ]
